<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>javalearning</groupId>
  <artifactId>javalearning</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <name>javalearning</name>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <java.version>${java.version}</java.version>
</properties>

<dependencies>
  <dependency>
    <groupId>com.fifesoft</groupId>
    <artifactId>rsyntaxtextarea</artifactId>
    <version>3.3.4</version>
  </dependency>
  <dependency>
    <groupId>com.fifesoft</groupId>
    <artifactId>autocomplete</artifactId>
    <version>3.3.1</version>
  </dependency>
  <dependency>
    <groupId>com.fifesoft</groupId>
    <artifactId>languagesupport</artifactId>
    <version>3.3.0</version>
  </dependency>
  <dependency>
    <groupId>org.apache.logging.log4j</groupId>
    <artifactId>log4j-core</artifactId>
    <version>2.22.0</version>
  </dependency>
</dependencies>
  
  <build>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <release>17</release>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>